# open-urls

./: Cargo.toml  Makefile  README.md
src/: args.rs  logger.rs  main.rs  url.rs
