[package]
name = "open-urls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["cargo", "derive"] }
open = "5.0.0"

# The log facade
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_debug", "kv_unstable"] }

# For terminal and JSON output
structured-logger = "1.0.3"
